--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "9             0  3.573474         0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "CARDIN (%)               0.08   0.08   0.08         0.08    99.12       0.21  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "Categories (5, object): ['A', 'B', 'C', 'D', 'F']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 2392 entries, 0 to 2391\n",
+      "Series name: GradeClass\n",
+      "Non-Null Count  Dtype   \n",
+      "--------------  -----   \n",
+      "2392 non-null   category\n",
+      "dtypes: category(1)\n",
+      "memory usage: 2.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_gradeClass.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +810,7 @@
        "max           1.000000     1.000000     1.000000      1.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +979,7 @@
        "CARDIN (%)            0.08  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1099,7 @@
        "11       Volunteering            Binaria"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1302,7 @@
        "CARDIN (%)            0.08  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1532,7 @@
        "9         0            High                1       0      0             0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1572,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Ethnicity</th>\n",
+       "      <th>ParentalEducation</th>\n",
+       "      <th>StudyTimeWeekly</th>\n",
+       "      <th>Absences</th>\n",
+       "      <th>Tutoring</th>\n",
+       "      <th>ParentalSupport</th>\n",
+       "      <th>Extracurricular</th>\n",
+       "      <th>Sports</th>\n",
+       "      <th>Music</th>\n",
+       "      <th>Volunteering</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>9.728101</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>5.055317</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>15.893258</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>African American</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>12.263407</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>10.638660</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2362</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>0.675783</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2364</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>3.734660</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2366</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>6.959373</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2376</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>14.667230</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2377</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>12.749976</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>212 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Age  Gender         Ethnicity ParentalEducation  StudyTimeWeekly  \\\n",
+       "15    15    Male         Caucasian      Some College         9.728101   \n",
+       "30    15    Male             Asian      Some College         5.055317   \n",
+       "33    16    Male             Other        Bachelor's        15.893258   \n",
+       "60    17  Female  African American       High School        12.263407   \n",
+       "67    15  Female         Caucasian       High School        10.638660   \n",
+       "...   ..     ...               ...               ...              ...   \n",
+       "2362  17  Female             Asian      Some College         0.675783   \n",
+       "2364  18  Female         Caucasian      Some College         3.734660   \n",
+       "2366  16  Female         Caucasian      Some College         6.959373   \n",
+       "2376  17  Female             Asian      Some College        14.667230   \n",
+       "2377  18    Male         Caucasian      Some College        12.749976   \n",
+       "\n",
+       "      Absences  Tutoring ParentalSupport  Extracurricular  Sports  Music  \\\n",
+       "15          17         1            None                0       1      0   \n",
+       "30          12         1            None                0       1      0   \n",
+       "33          21         0            None                1       1      0   \n",
+       "60          10         0            None                1       0      1   \n",
+       "67          28         0            None                0       1      0   \n",
+       "...        ...       ...             ...              ...     ...    ...   \n",
+       "2362        19         1            None                0       0      0   \n",
+       "2364         1         1            None                0       0      0   \n",
+       "2366        17         0            None                0       0      0   \n",
+       "2376         3         0            None                1       0      0   \n",
+       "2377         8         1            None                1       1      0   \n",
+       "\n",
+       "      Volunteering  \n",
+       "15               0  \n",
+       "30               0  \n",
+       "33               0  \n",
+       "60               0  \n",
+       "67               0  \n",
+       "...            ...  \n",
+       "2362             0  \n",
+       "2364             0  \n",
+       "2366             0  \n",
+       "2376             0  \n",
+       "2377             0  \n",
+       "\n",
+       "[212 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[X['ParentalSupport']=='None']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
