--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data\\Student_performance_data _.csv\")"
+    "df = pd.read_csv(\"data\\Student_performance_data _.csv\") # Cargamos los datos sin limpiar"
    ]
   },
   {
