--- a/gpa_predictor.ipynb
+++ b/gpa_predictor.ipynb
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.read_csv('data\\clean_data\\clean_features.csv')\n",
-    "y = pd.read_csv('data\\clean_data\\clean_target_gpa.csv')['GPA']"
+    "X = pd.read_csv('data\\clean_data\\clean_features.csv') # cargamos los datos limpios\n",
+    "y = pd.read_csv('data\\clean_data\\clean_target_gpa.csv')['GPA'] # cargamos los datos de target limpios"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
+    "scaler = StandardScaler() # Escalamos las features numéricas para su mejor visualización\n",
     "X_train[variables_numericas] = scaler.fit_transform(X_train[variables_numericas])"
    ]
   },
@@ -378,7 +378,7 @@
     }
    ],
    "source": [
-    "correlation_matrix = df_num_target.corr()\n",
+    "correlation_matrix = df_num_target.corr() # Calculamos la matriz de correlaciones para comprobar si existe multicolinealidad con las features \n",
     "\n",
     "# Crear el heatmap\n",
     "plt.figure(figsize=(10, 8))\n",
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Descartamos la feature Absences por multicolinealidad"
+    "# Podemos observar que ambas features tienen una correlación interesante con GPA, siendo la más interesante la feature 'Absences'."
    ]
   },
   {
