--- a/gradeClass_predictor.ipynb
+++ b/gradeClass_predictor.ipynb
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.read_csv('data\\clean_data\\clean_features.csv')\n",
-    "y = pd.read_csv('data/clean_data/clean_target_gradeClass.csv')['GradeClass']"
+    "X = pd.read_csv('data\\clean_data\\clean_features.csv') # cargamos los datos limpios\n",
+    "y = pd.read_csv('data/clean_data/clean_target_gradeClass.csv')['GradeClass'] # cargamos los datos de target limpios"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
+    "scaler = StandardScaler() # Escalamos las features numéricas para su mejor visualización\n",
     "X_train[variables_numericas] = scaler.fit_transform(X_train[variables_numericas])"
    ]
   },
@@ -840,6 +840,13 @@
    ],
    "source": [
     "variables_categoricas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definimos las siguientes funciones para la visualización de las features categoricas en función de la variable de target para decidir si finalmente son útiles o no en el modelo de clasificación."
    ]
   },
   {
@@ -1942,6 +1949,13 @@
     "plt.axis('off')  # Desactivar ejes\n",
     "plt.title('Classification Report')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Los resultados indican, como era de esperar, que el modelo de regresión lineal es mejor y mucho más correcto en este contexto ya que el modelo de clasificación se fundamenta en datos que han sido clasificados de manera brusca. Por tanto, se hará un analisis más exhaustivo del modelo lineal y será este el utilizado en la presentación."
    ]
   },
   {
