--- a/gpa_predictor.ipynb
+++ b/gpa_predictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1632,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1683,6 +1693,535 @@
     "plt.title('Comparación de Predicciones y Valores Reales')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1004    1.427724\n",
+       "196     3.117354\n",
+       "2342    2.037769\n",
+       "1708    3.548521\n",
+       "435     0.248977\n",
+       "          ...   \n",
+       "986     1.562360\n",
+       "120     2.174903\n",
+       "283     2.332540\n",
+       "1740    2.777967\n",
+       "1726    0.863545\n",
+       "Name: GPA, Length: 479, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.35187364],\n",
+       "       [2.96232781],\n",
+       "       [2.0167728 ],\n",
+       "       [3.57565881],\n",
+       "       [0.32710162],\n",
+       "       [2.75604524],\n",
+       "       [1.48506694],\n",
+       "       [1.77392877],\n",
+       "       [2.10942769],\n",
+       "       [1.10444643],\n",
+       "       [2.37141938],\n",
+       "       [0.65875056],\n",
+       "       [2.96436528],\n",
+       "       [2.79484698],\n",
+       "       [2.65007578],\n",
+       "       [0.35655958],\n",
+       "       [1.31524585],\n",
+       "       [1.38915556],\n",
+       "       [1.71412535],\n",
+       "       [2.31529147],\n",
+       "       [2.32090991],\n",
+       "       [1.50206934],\n",
+       "       [1.70588533],\n",
+       "       [3.1177847 ],\n",
+       "       [1.88614008],\n",
+       "       [0.54049096],\n",
+       "       [1.67800146],\n",
+       "       [2.3793834 ],\n",
+       "       [2.11090999],\n",
+       "       [1.87118174],\n",
+       "       [1.91403535],\n",
+       "       [0.7976663 ],\n",
+       "       [2.91691314],\n",
+       "       [3.43867104],\n",
+       "       [1.69847027],\n",
+       "       [1.70313935],\n",
+       "       [3.1470988 ],\n",
+       "       [2.90625112],\n",
+       "       [3.04143907],\n",
+       "       [0.80562003],\n",
+       "       [2.31757212],\n",
+       "       [3.29703321],\n",
+       "       [1.1141238 ],\n",
+       "       [2.11078364],\n",
+       "       [0.9607694 ],\n",
+       "       [2.59733869],\n",
+       "       [2.79587306],\n",
+       "       [0.97062253],\n",
+       "       [2.83985497],\n",
+       "       [1.56233297],\n",
+       "       [2.9043323 ],\n",
+       "       [3.12162519],\n",
+       "       [1.44908275],\n",
+       "       [1.07727298],\n",
+       "       [2.02215443],\n",
+       "       [3.25851566],\n",
+       "       [2.65738658],\n",
+       "       [3.39218307],\n",
+       "       [0.94511747],\n",
+       "       [1.89725587],\n",
+       "       [2.00091903],\n",
+       "       [1.48874491],\n",
+       "       [2.56556955],\n",
+       "       [1.72403281],\n",
+       "       [1.18996432],\n",
+       "       [2.54075777],\n",
+       "       [3.41777997],\n",
+       "       [2.72318985],\n",
+       "       [1.2094133 ],\n",
+       "       [3.54580361],\n",
+       "       [3.31159692],\n",
+       "       [0.97202921],\n",
+       "       [2.7934004 ],\n",
+       "       [2.58977379],\n",
+       "       [0.87600423],\n",
+       "       [2.99454703],\n",
+       "       [1.45663758],\n",
+       "       [1.28888337],\n",
+       "       [0.46942169],\n",
+       "       [1.26543686],\n",
+       "       [1.70170858],\n",
+       "       [3.01321112],\n",
+       "       [2.37292745],\n",
+       "       [1.64602633],\n",
+       "       [1.62035647],\n",
+       "       [0.57224929],\n",
+       "       [3.65670297],\n",
+       "       [0.79778919],\n",
+       "       [1.53216374],\n",
+       "       [1.63784745],\n",
+       "       [2.45470269],\n",
+       "       [1.2488536 ],\n",
+       "       [1.02055875],\n",
+       "       [0.48201993],\n",
+       "       [1.85809164],\n",
+       "       [1.22062338],\n",
+       "       [3.46433726],\n",
+       "       [1.24048514],\n",
+       "       [1.79286565],\n",
+       "       [1.58173195],\n",
+       "       [0.18481582],\n",
+       "       [2.18237831],\n",
+       "       [1.14163338],\n",
+       "       [1.68262918],\n",
+       "       [0.89574668],\n",
+       "       [2.23656442],\n",
+       "       [2.70468822],\n",
+       "       [1.03736088],\n",
+       "       [1.47478188],\n",
+       "       [0.44529619],\n",
+       "       [1.95474593],\n",
+       "       [1.93009043],\n",
+       "       [3.44721511],\n",
+       "       [0.47134859],\n",
+       "       [0.51795134],\n",
+       "       [1.22234555],\n",
+       "       [1.83946023],\n",
+       "       [3.06679595],\n",
+       "       [0.73319808],\n",
+       "       [2.19183683],\n",
+       "       [0.65836049],\n",
+       "       [3.14976992],\n",
+       "       [3.07625269],\n",
+       "       [0.69797987],\n",
+       "       [1.85683345],\n",
+       "       [0.93686178],\n",
+       "       [2.22779289],\n",
+       "       [0.95260572],\n",
+       "       [1.85826219],\n",
+       "       [2.8258122 ],\n",
+       "       [0.79371707],\n",
+       "       [3.8982793 ],\n",
+       "       [2.90040811],\n",
+       "       [0.40478621],\n",
+       "       [0.69632978],\n",
+       "       [0.79887041],\n",
+       "       [2.27965901],\n",
+       "       [0.41103348],\n",
+       "       [0.57469768],\n",
+       "       [1.43218295],\n",
+       "       [2.32470404],\n",
+       "       [1.84267602],\n",
+       "       [3.0272705 ],\n",
+       "       [1.96336126],\n",
+       "       [2.88590235],\n",
+       "       [1.28872385],\n",
+       "       [1.49914071],\n",
+       "       [2.42766654],\n",
+       "       [3.05584955],\n",
+       "       [1.46924691],\n",
+       "       [3.12828215],\n",
+       "       [1.10462766],\n",
+       "       [3.27984444],\n",
+       "       [1.53454632],\n",
+       "       [0.9953978 ],\n",
+       "       [0.75745239],\n",
+       "       [1.52945486],\n",
+       "       [0.77140962],\n",
+       "       [1.37398783],\n",
+       "       [0.84833958],\n",
+       "       [1.75814245],\n",
+       "       [1.31334582],\n",
+       "       [0.86944133],\n",
+       "       [0.81552551],\n",
+       "       [0.45582635],\n",
+       "       [0.42194242],\n",
+       "       [1.00835726],\n",
+       "       [1.36514452],\n",
+       "       [2.65148295],\n",
+       "       [3.46127859],\n",
+       "       [1.67887444],\n",
+       "       [3.31689449],\n",
+       "       [3.02330361],\n",
+       "       [1.20074026],\n",
+       "       [1.33196629],\n",
+       "       [2.50682441],\n",
+       "       [2.57737131],\n",
+       "       [1.04596726],\n",
+       "       [2.13186213],\n",
+       "       [1.55835917],\n",
+       "       [3.00809799],\n",
+       "       [1.95310591],\n",
+       "       [1.0025109 ],\n",
+       "       [3.04382973],\n",
+       "       [2.74374491],\n",
+       "       [2.90699602],\n",
+       "       [3.26968133],\n",
+       "       [1.76511748],\n",
+       "       [0.32519032],\n",
+       "       [2.08740456],\n",
+       "       [1.10935736],\n",
+       "       [1.94654998],\n",
+       "       [1.29816568],\n",
+       "       [0.84290566],\n",
+       "       [2.09855878],\n",
+       "       [1.40101153],\n",
+       "       [1.70927334],\n",
+       "       [2.06922364],\n",
+       "       [2.79541775],\n",
+       "       [2.58381773],\n",
+       "       [1.54247389],\n",
+       "       [2.94640285],\n",
+       "       [0.50597141],\n",
+       "       [2.0050945 ],\n",
+       "       [2.99287535],\n",
+       "       [1.72180896],\n",
+       "       [0.51165784],\n",
+       "       [3.00137993],\n",
+       "       [1.88133859],\n",
+       "       [1.61325068],\n",
+       "       [1.20983924],\n",
+       "       [0.97080763],\n",
+       "       [1.97692846],\n",
+       "       [2.89530474],\n",
+       "       [2.45556544],\n",
+       "       [0.97170343],\n",
+       "       [3.05490157],\n",
+       "       [2.86763816],\n",
+       "       [1.66567508],\n",
+       "       [3.10370373],\n",
+       "       [0.88709701],\n",
+       "       [2.42279308],\n",
+       "       [3.39326696],\n",
+       "       [0.37341727],\n",
+       "       [1.79941273],\n",
+       "       [1.75871647],\n",
+       "       [3.04407553],\n",
+       "       [2.75667489],\n",
+       "       [1.07724809],\n",
+       "       [2.08822462],\n",
+       "       [1.47034456],\n",
+       "       [1.89239509],\n",
+       "       [2.80979769],\n",
+       "       [1.22711953],\n",
+       "       [3.15097235],\n",
+       "       [2.52798509],\n",
+       "       [0.60451408],\n",
+       "       [1.08939885],\n",
+       "       [2.96528703],\n",
+       "       [0.55602252],\n",
+       "       [3.19773297],\n",
+       "       [0.86008761],\n",
+       "       [0.63304394],\n",
+       "       [2.41081252],\n",
+       "       [1.34440611],\n",
+       "       [0.66180193],\n",
+       "       [2.52638536],\n",
+       "       [1.20458108],\n",
+       "       [0.57869151],\n",
+       "       [1.82300429],\n",
+       "       [1.39221819],\n",
+       "       [2.97693483],\n",
+       "       [2.43842897],\n",
+       "       [1.94437724],\n",
+       "       [2.26779133],\n",
+       "       [1.56191205],\n",
+       "       [1.37547064],\n",
+       "       [2.3319963 ],\n",
+       "       [0.26736255],\n",
+       "       [1.28029177],\n",
+       "       [2.03652841],\n",
+       "       [0.44560191],\n",
+       "       [1.25967652],\n",
+       "       [0.53978149],\n",
+       "       [2.13046437],\n",
+       "       [3.01462349],\n",
+       "       [2.35211865],\n",
+       "       [1.01248732],\n",
+       "       [2.757419  ],\n",
+       "       [2.3398776 ],\n",
+       "       [1.11769525],\n",
+       "       [3.41637193],\n",
+       "       [1.67718077],\n",
+       "       [1.54402511],\n",
+       "       [1.41456337],\n",
+       "       [2.51393774],\n",
+       "       [1.26717103],\n",
+       "       [2.04589871],\n",
+       "       [0.48519221],\n",
+       "       [2.75255943],\n",
+       "       [3.02025904],\n",
+       "       [2.84018757],\n",
+       "       [2.17021291],\n",
+       "       [1.44846409],\n",
+       "       [3.12485916],\n",
+       "       [2.41573491],\n",
+       "       [1.18171072],\n",
+       "       [1.58744303],\n",
+       "       [0.82057082],\n",
+       "       [0.67677938],\n",
+       "       [3.24916266],\n",
+       "       [1.62941737],\n",
+       "       [2.75053308],\n",
+       "       [1.16752141],\n",
+       "       [2.3501433 ],\n",
+       "       [1.00398673],\n",
+       "       [3.09124136],\n",
+       "       [1.52775511],\n",
+       "       [0.44964999],\n",
+       "       [2.95884317],\n",
+       "       [2.6323936 ],\n",
+       "       [1.77633273],\n",
+       "       [1.05584099],\n",
+       "       [3.45809936],\n",
+       "       [1.91725492],\n",
+       "       [2.59361486],\n",
+       "       [0.58941953],\n",
+       "       [1.95791269],\n",
+       "       [0.80098007],\n",
+       "       [1.94133236],\n",
+       "       [1.44493025],\n",
+       "       [1.91406041],\n",
+       "       [0.80266988],\n",
+       "       [1.0053736 ],\n",
+       "       [1.09987502],\n",
+       "       [1.56953577],\n",
+       "       [3.07597806],\n",
+       "       [2.38917388],\n",
+       "       [2.71563498],\n",
+       "       [1.90470491],\n",
+       "       [2.00764787],\n",
+       "       [1.51470265],\n",
+       "       [1.78094061],\n",
+       "       [2.01129983],\n",
+       "       [2.89568176],\n",
+       "       [1.23423508],\n",
+       "       [0.79793552],\n",
+       "       [1.10203658],\n",
+       "       [2.84451308],\n",
+       "       [1.22891242],\n",
+       "       [1.80890011],\n",
+       "       [2.82789209],\n",
+       "       [2.15164476],\n",
+       "       [2.71829605],\n",
+       "       [3.23407942],\n",
+       "       [2.47853294],\n",
+       "       [2.4498115 ],\n",
+       "       [1.40989637],\n",
+       "       [0.48163254],\n",
+       "       [1.85365011],\n",
+       "       [1.47627941],\n",
+       "       [1.85724318],\n",
+       "       [1.08369417],\n",
+       "       [1.53693775],\n",
+       "       [2.0645541 ],\n",
+       "       [2.57107942],\n",
+       "       [2.99059858],\n",
+       "       [3.24509281],\n",
+       "       [1.12429887],\n",
+       "       [3.26247402],\n",
+       "       [3.10766208],\n",
+       "       [2.42984291],\n",
+       "       [2.17142489],\n",
+       "       [2.64535978],\n",
+       "       [1.90311267],\n",
+       "       [1.83501242],\n",
+       "       [2.61418198],\n",
+       "       [1.16748728],\n",
+       "       [0.64113014],\n",
+       "       [2.21837127],\n",
+       "       [2.49111544],\n",
+       "       [3.03467502],\n",
+       "       [2.35841486],\n",
+       "       [1.42869669],\n",
+       "       [1.79572108],\n",
+       "       [3.05122886],\n",
+       "       [3.56644612],\n",
+       "       [2.74613634],\n",
+       "       [2.70192716],\n",
+       "       [2.3055464 ],\n",
+       "       [0.90440391],\n",
+       "       [2.10605632],\n",
+       "       [2.16087523],\n",
+       "       [2.61906565],\n",
+       "       [2.41745346],\n",
+       "       [1.20743627],\n",
+       "       [1.53854026],\n",
+       "       [2.30755327],\n",
+       "       [3.31021953],\n",
+       "       [1.13905928],\n",
+       "       [2.11748712],\n",
+       "       [2.54678611],\n",
+       "       [0.80381406],\n",
+       "       [3.01031059],\n",
+       "       [2.53094022],\n",
+       "       [1.33780581],\n",
+       "       [2.2124775 ],\n",
+       "       [2.09915627],\n",
+       "       [2.65125688],\n",
+       "       [1.88807546],\n",
+       "       [2.66734672],\n",
+       "       [1.01542258],\n",
+       "       [1.13292079],\n",
+       "       [2.46863561],\n",
+       "       [2.15923311],\n",
+       "       [2.9251049 ],\n",
+       "       [2.64937583],\n",
+       "       [2.88097082],\n",
+       "       [2.07829929],\n",
+       "       [2.87780818],\n",
+       "       [2.61150062],\n",
+       "       [2.25564277],\n",
+       "       [2.6352518 ],\n",
+       "       [2.63169166],\n",
+       "       [2.13489241],\n",
+       "       [2.68736895],\n",
+       "       [1.05257093],\n",
+       "       [3.03821787],\n",
+       "       [2.3540383 ],\n",
+       "       [3.22382989],\n",
+       "       [1.73484831],\n",
+       "       [1.61858053],\n",
+       "       [2.33126971],\n",
+       "       [2.29230263],\n",
+       "       [3.32168998],\n",
+       "       [2.1020118 ],\n",
+       "       [0.45385184],\n",
+       "       [3.24003695],\n",
+       "       [2.60711071],\n",
+       "       [1.42921024],\n",
+       "       [1.68798191],\n",
+       "       [1.63501098],\n",
+       "       [2.19614858],\n",
+       "       [1.84511755],\n",
+       "       [1.17866433],\n",
+       "       [0.87826969],\n",
+       "       [0.67803698],\n",
+       "       [2.53379268],\n",
+       "       [2.05357147],\n",
+       "       [3.31364835],\n",
+       "       [2.95448551],\n",
+       "       [1.64508765],\n",
+       "       [2.00637587],\n",
+       "       [3.2956358 ],\n",
+       "       [2.13710532],\n",
+       "       [2.30934457],\n",
+       "       [1.57845514],\n",
+       "       [3.32367237],\n",
+       "       [2.59237222],\n",
+       "       [1.4756176 ],\n",
+       "       [1.70470504],\n",
+       "       [2.7025817 ],\n",
+       "       [2.93880999],\n",
+       "       [2.90749198],\n",
+       "       [2.73045685],\n",
+       "       [3.10403236],\n",
+       "       [1.11460346],\n",
+       "       [2.82170865],\n",
+       "       [0.66773844],\n",
+       "       [0.70354287],\n",
+       "       [2.34447688],\n",
+       "       [0.9679564 ],\n",
+       "       [2.63774641],\n",
+       "       [2.08335388],\n",
+       "       [3.59364009],\n",
+       "       [1.79365501],\n",
+       "       [1.02681274],\n",
+       "       [0.67316085],\n",
+       "       [0.84860421],\n",
+       "       [2.30370759],\n",
+       "       [0.81295594],\n",
+       "       [0.64604426],\n",
+       "       [0.85128768],\n",
+       "       [1.44523341],\n",
+       "       [2.28973976],\n",
+       "       [0.30621069],\n",
+       "       [0.54067189],\n",
+       "       [2.68772842],\n",
+       "       [2.96968149],\n",
+       "       [2.84742426],\n",
+       "       [1.29397777],\n",
+       "       [1.89791047],\n",
+       "       [1.11250847],\n",
+       "       [1.17486433],\n",
+       "       [1.85240661],\n",
+       "       [1.80531214],\n",
+       "       [2.55970704],\n",
+       "       [2.50438239],\n",
+       "       [1.07386767]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
    ]
   },
   {
